# password-storage

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  Makefile  PassStorage.lisp  PassStorage.sh  PassStorage.ui  PassStorageCCL.bat  PassStorageCCL.sh  PassStorageCompiled.sh  PassStorageSBCL.bat  README.md  build.rs  compile.sh  dmg.json  feed.atom  icons.gresource.xml  icons.rc  indicators.xcf  make-deb  make-deb.sh  make-win.sh  makefile  merge.xcf  pass-storage.asd  pass-storage.config.lisp  pass-storage.entropy.lisp  pass-storage.group-edit.lisp  pass-storage.item-edit.lisp  pass-storage.item.lisp  pass-storage.load.lisp  pass-storage.main.lisp  pass-storage.package.lisp  pass-storage.password.lisp  pass-storage.utils.lisp  pass-storage.version.lisp  pass-storage.xml.lisp  (+2 more)
.github/: dependabot.yml
.github/disabled-workflows/: coverage.yml
.github/workflows/: build-gtk-macos.yml  ci_linux.yml  ci_macos.yml  ci_windows.yml  clippy.yml  coverage.yml  release_linux.yml  release_macos.yml  release_windows.yml  site.yml
build-flatpak/: dev.andy128k.password-storage.metainfo.xml  dev.andy128k.password-storage.yml  password-storage.desktop  revelation.xml
gnome/: make-deb.sh
icons/: merge.xcf
macos/: Info.plist  PasswordStorage  PasswordStorage.bundle
news/: index.html
news/1/: index.html
news/2/: index.html
news/3/: index.html
news/4/: index.html
password-storage/: Cargo.toml  icons.gresource.xml
password-storage/src/: application.rs  cache.rs  error.rs  icons.rs  main_window.rs  password.rs  test.rs
site/: .eleventy.js  CNAME  feed.atom.liquid  index.html  news.html  package-lock.json  package.json  screenshots.html
site/_includes/: default.html  news.html
site/css/: style.css
site/news/: 2010-02-08-version-0.10.2.8.html  2010-02-22-version-0.10.2.22.html  2010-03-03-version-0.10.3.3.html  2010-05-20-version-0.10.5.20.html  2010-06-28-version-0.10.6.28.html  2011-03-10-version-0.11.3.10.html  2011-11-26-version-0.11.11.26.html  2019-03-24-version-0.17.2.html  2019-08-16-version-0.17.3.html  2019-09-12-version-0.17.4.html  2019-10-25-version-0.17.5.html  (+4 more)
src/: application.rs  async_slot.rs  cache.rs  config.rs  css.rs  entropy.rs  error.rs  gtk_prelude.rs  icons.rs  id.rs  lib.rs  main.rs  main_window.rs  markup_builder.rs  password.rs  ptr.rs  shortcuts.rs  slot.rs  test.rs  version.rs  weak_map.rs
ui_tests/: application.rs  main.rs  weak_map.rs
unix-desktop/: password-storage.desktop  revelation.xml
windows/: makefile  runner.c  runner.rc  setup.iss
(+152 files in other folders)
