[package]
name = "password-storage"
version = "0.20.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
build = "build.rs"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Password storing program"
readme = "README.md"

[dependencies]
once_cell = "1"
os_str_bytes = "6"

rand = "0.8"
aes = "0.8"
cbc = "0.1"
deflate = "1"
inflate = "0.4"
quick-xml = "0.29"

toml = "0.7"
serde = { version = "1", features = ["derive"] }

gtk = { package = "gtk4", version = "0.6", features = ["v4_6"] }
awesome-glib = "0.2"
awesome-gtk = "0.2"

[build-dependencies]
glib-build-tools = "0.17"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true

[[test]]
name = "ui_tests"
path = "ui_tests/main.rs"
harness = false
