[package]
name = "password-storage"
version = "0.20.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
build = "build.rs"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Password storing program"
readme = "README.md"

[dependencies]
futures = "0.3"
os_str_bytes = { version = "6", features = ["conversions"] }

rand = "0.8"
aes = "0.8"
cbc = "0.1"
deflate = "1"
inflate = "0.4"
quick-xml = "0.31"

toml = "0.8"
serde = { version = "1", features = ["derive"] }

gtk = { package = "gtk4", version = "0.7", features = ["v4_12"] }
awesome-glib = "0.3"
awesome-gtk = "0.3"

[build-dependencies]
glib-build-tools = "0.18"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true

[[test]]
name = "ui_tests"
path = "ui_tests/main.rs"
harness = false
