[package]
name = "password-storage"
version = "0.20.0"
authors = ["Andrey Kutejko <andy128k@gmail.com>"]
build = "build.rs"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Password storing program"
readme = "README.md"
default-run = "password-storage"

[dependencies]
futures = "0.3"

rand = "0.8"
aes = "0.8"
cbc = "0.1"
deflate = "1"
inflate = "0.4"
quick-xml = "0.36"

toml = "0.8"
serde = { version = "1", features = ["derive"] }

gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
awesome-glib = "0.5"
awesome-gtk = "0.5"

clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
glib-build-tools = "0.20"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2"

[profile.release]
strip = true

[[test]]
name = "ui_tests"
path = "ui_tests/main.rs"
harness = false
